code cleanup
- declare list by interface Map instead of implementing class
- use ArrayList instead of LinkedList